--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.3.8",
+  "version": "0.4.1",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
-    "@babel/runtime-corejs3": "^7.6.3",
     "address": "^1.1.0",
     "babel-loader": "^8.0.5",
     "chalk": "^1.1.3",
@@ -36,10 +35,10 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
-    "recursive-readdir": "^2.2.2",
     "sass-loader": "^8.0.0",
     "strip-ansi": "^5.2.0",
     "style-loader": "^0.20.1",
+    "recursive-readdir": "^2.2.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^15.7.1",
