--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -16,6 +16,7 @@
     "address": "^1.1.0",
     "babel-loader": "^8.0.5",
     "chalk": "^1.1.3",
+    "core-js": "^3.3.2",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.9",
     "eslint-friendly-formatter": "^4.0.1",
@@ -35,10 +36,10 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
+    "recursive-readdir": "^2.2.2",
     "sass-loader": "^8.0.0",
     "strip-ansi": "^5.2.0",
     "style-loader": "^0.20.1",
-    "recursive-readdir": "^2.2.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^15.7.1",
