--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.4.2",
+  "version": "0.4.4",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.2",
     "address": "^1.1.0",
     "babel-loader": "^8.0.5",
     "chalk": "^1.1.3",
-    "core-js": "^2.6.10",
+    "core-js": "^3.3.2",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.9",
     "eslint-friendly-formatter": "^4.0.1",
@@ -37,6 +36,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
     "recursive-readdir": "^2.2.2",
+    "regenerator-runtime": "^0.13.3",
     "sass-loader": "^8.0.0",
     "strip-ansi": "^5.2.0",
     "style-loader": "^0.20.1",
