--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.4.9",
+  "version": "0.5.0",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -15,6 +15,7 @@
     "address": "^1.1.0",
     "babel-loader": "^8.0.5",
     "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^5.0.4",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.9",
     "eslint-friendly-formatter": "^4.0.1",
@@ -36,6 +37,7 @@
     "postcss-scss": "^2.0.0",
     "recursive-readdir": "^2.2.2",
     "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
     "strip-ansi": "^5.2.0",
     "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -45,8 +47,7 @@
     "webpack": "^4.23.1",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "sass-resources-loader": "^2.0.1"
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
