--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.6.3",
+  "version": "0.6.4",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -13,14 +13,16 @@
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.12.7",
     "address": "^1.1.0",
     "babel-loader": "^8.0.5",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^5.0.4",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.9",
-    "eslint-friendly-formatter": "^4.0.1",
+    "eslint": "^7.18.0",
     "eslint-loader": "^2.2.1",
+    "eslint-webpack-plugin": "^2.4.3",
     "file-loader": "^4.2.0",
     "filesize": "^4.1.2",
     "fs": "0.0.1-security",
@@ -42,6 +44,7 @@
     "sass-resources-loader": "^2.0.1",
     "strip-ansi": "^5.2.0",
     "style-loader": "^0.20.3",
+    "ts-loader": "^8.0.14",
     "url-loader": "^0.6.2",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.11",
