--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.6.8",
+  "version": "0.7.0",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -48,10 +48,10 @@
     "url-loader": "0.6.2",
     "vue-loader": "15.7.1",
     "vue-template-compiler": "2.6.11",
-    "webpack": "4.23.1",
-    "webpack-bundle-analyzer": "3.4.1",
-    "webpack-cli": "3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "webpack": "^4.23.1",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
