--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -10,42 +10,41 @@
     "registry": "http://192.168.150.186:11111/repository/npm-internal/"
   },
   "dependencies": {
-    "@babel/core": "7.6.2",
-    "@babel/preset-env": "7.11.5",
-    "@babel/preset-react": "7.10.4",
-    "@babel/preset-typescript": "7.12.7",
-    "address": "1.1.0",
-    "babel-loader": "8.0.5",
-    "chalk": "1.1.3",
-    "copy-webpack-plugin": "5.0.4",
-    "cross-spawn": "5.1.0",
-    "css-loader": "0.28.9",
-    "eslint": "7.18.0",
-    "eslint-loader": "2.2.1",
-    "eslint-webpack-plugin": "2.4.3",
-    "file-loader": "4.2.0",
-    "filesize": "4.1.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.12.7",
+    "address": "^1.1.0",
+    "babel-loader": "^8.0.5",
+    "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^5.0.4",
+    "cross-spawn": "^5.1.0",
+    "css-loader": "^0.28.9",
+    "eslint": "^7.18.0",
+    "eslint-webpack-plugin": "^2.4.3",
+    "file-loader": "^4.2.0",
+    "filesize": "^4.1.2",
     "fs": "0.0.1-security",
-    "fs-extra": "7.0.0",
-    "gzip-size": "5.1.1",
-    "html-webpack-plugin": "3.2.0",
-    "i": "0.3.6",
+    "fs-extra": "^7.0.0",
+    "gzip-size": "^5.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "i": "^0.3.6",
     "less": "3.9.0",
-    "less-loader": "4.1.0",
-    "mini-css-extract-plugin": "0.4.4",
-    "node-sass": "4.12.0",
-    "npm": "6.11.3",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-loader": "3.0.0",
-    "postcss-scss": "2.0.0",
-    "react-dev-utils": "10.2.1",
-    "recursive-readdir": "2.2.2",
-    "sass-loader": "8.0.0",
-    "sass-resources-loader": "2.0.1",
-    "strip-ansi": "5.2.0",
-    "style-loader": "0.20.3",
-    "ts-loader": "8.0.14",
-    "url-loader": "0.6.2",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.12.0",
+    "npm": "^6.11.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.0.0",
+    "react-dev-utils": "^10.2.1",
+    "recursive-readdir": "^2.2.2",
+    "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
+    "strip-ansi": "^5.2.0",
+    "style-loader": "^0.20.3",
+    "ts-loader": "^8.0.14",
+    "url-loader": "^0.6.2",
     "vue-loader": "15.7.1",
     "vue-template-compiler": "2.6.11",
     "webpack": "^4.23.1",
