--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "czty-script",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "author": "Jin",
   "license": "MIT",
   "bin": {
@@ -14,6 +14,7 @@
     "address": "^1.1.0",
     "babel-loader": "^8.0.5",
     "chalk": "^1.1.3",
+    "compression-webpack-plugin": "^5.0.1",
     "copy-webpack-plugin": "^5.0.4",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.9",
